--- a/src/app/shared/scoreboards/admin-forms/scoreboard-data-forms/scoreboard-data-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/scoreboard-data-forms/scoreboard-data-forms.component.html
@@ -1,42 +1,65 @@
 <!--SCOREBOARD DATA-->
 <div
   *ngIf="changeScoreBoardFormsVisible$ | async"
-  id="scoreboard-settings"
   class="scoreboard-settings"
 >
   <div id="scoreboard-settings-btns" class="scoreboard-settings-btns">
-    <button
-      id="qtr-btn-show-hide"
-      class="settings-show-hide-btn"
-      type="button"
-      data-field-name="Qtr"
+    <app-admin-down-button
+      [down]="data.scoreboard_data?.is_qtr ? 'Hide' : 'Show'"
+      [distance]="'Qtr Field'"
       (click)="toggleQuarterVisibility(data.scoreboard_data!)"
-    >{{ data.scoreboard_data?.is_qtr ? 'Hide' : 'Show' }} Qtr Field
-    </button>
-    <button
-      id="gametime-btn-show-hide"
-      class="settings-show-hide-btn"
-      type="button"
-      data-field-name="Game Time"
+    ></app-admin-down-button>
+
+    <app-admin-down-button
+      [down]="data.scoreboard_data?.is_time ? 'Hide' : 'Show'"
+      [distance]="'Game Time Field'"
       (click)="toggleGameClockVisibility(data.scoreboard_data!)"
-    >{{ data.scoreboard_data?.is_time ? 'Hide' : 'Show' }} Game Time Field
-    </button>
-    <button
-      id="playclock-btn-show-hide"
-      class="settings-show-hide-btn"
-      type="button"
-      data-field-name="Play Clock"
+    ></app-admin-down-button>
+
+    <app-admin-down-button
+      [down]="data.scoreboard_data?.is_playclock ? 'Hide' : 'Show'"
+      [distance]="'Play Clock'"
       (click)="togglePlayClockVisibility(data.scoreboard_data!)"
-    >{{ data.scoreboard_data?.is_playclock ? 'Hide' : 'Show' }} Play Clock Field
-    </button>
-    <button
-      id="down-distance-btn-show-hide"
-      class="settings-show-hide-btn"
-      type="button"
-      data-field-name="Down&amp;Distance"
+    ></app-admin-down-button>
+
+    <app-admin-down-button
+      [down]="data.scoreboard_data?.is_downdistance ? 'Hide' : 'Show'"
+      [distance]="'Down&amp;Distance Field'"
       (click)="toggleDownAndDistanceVisibility(data.scoreboard_data!)"
-    >{{ data.scoreboard_data?.is_downdistance ? 'Hide' : 'Show' }} Down&amp;Distance Field
-    </button>
+    ></app-admin-down-button>
+
+    <!--    <button-->
+    <!--      id="qtr-btn-show-hide"-->
+    <!--      class="settings-show-hide-btn"-->
+    <!--      type="button"-->
+    <!--      data-field-name="Qtr"-->
+    <!--      (click)="toggleQuarterVisibility(data.scoreboard_data!)"-->
+    <!--    >{{ data.scoreboard_data?.is_qtr ? 'Hide' : 'Show' }} Qtr Field-->
+    <!--    </button>-->
+    <!--    <button-->
+    <!--      id="gametime-btn-show-hide"-->
+    <!--      class="settings-show-hide-btn"-->
+    <!--      type="button"-->
+    <!--      data-field-name="Game Time"-->
+    <!--      (click)="toggleGameClockVisibility(data.scoreboard_data!)"-->
+    <!--    >{{ data.scoreboard_data?.is_time ? 'Hide' : 'Show' }} Game Time Field-->
+    <!--    </button>-->
+    <!--    <button-->
+    <!--      id="playclock-btn-show-hide"-->
+    <!--      class="settings-show-hide-btn"-->
+    <!--      type="button"-->
+    <!--      data-field-name="Play Clock"-->
+    <!--      (click)="togglePlayClockVisibility(data.scoreboard_data!)"-->
+    <!--    >{{ data.scoreboard_data?.is_playclock ? 'Hide' : 'Show' }} Play Clock Field-->
+    <!--    </button>-->
+    <!--    <button-->
+    <!--      id="down-distance-btn-show-hide"-->
+    <!--      class="settings-show-hide-btn"-->
+    <!--      type="button"-->
+    <!--      data-field-name="Down&amp;Distance"-->
+    <!--      (click)="toggleDownAndDistanceVisibility(data.scoreboard_data!)"-->
+    <!--    >{{ data.scoreboard_data?.is_downdistance ? 'Hide' : 'Show' }} Down&amp;Distance Field-->
+    <!--    </button>-->
 
   </div>
   <div id="scoreboard-teams-colors" class="scoreboard-teams-colors">
