--- a/src/app/shared/scoreboards/admin-forms/scoreboard-data-forms/scoreboard-data-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/scoreboard-data-forms/scoreboard-data-forms.component.html
@@ -28,43 +28,10 @@
       (click)="toggleDownAndDistanceVisibility(data.scoreboard_data!)"
     ></app-admin-down-button>
 
-    <!--    <button-->
-    <!--      id="qtr-btn-show-hide"-->
-    <!--      class="settings-show-hide-btn"-->
-    <!--      type="button"-->
-    <!--      data-field-name="Qtr"-->
-    <!--      (click)="toggleQuarterVisibility(data.scoreboard_data!)"-->
-    <!--    >{{ data.scoreboard_data?.is_qtr ? 'Hide' : 'Show' }} Qtr Field-->
-    <!--    </button>-->
-    <!--    <button-->
-    <!--      id="gametime-btn-show-hide"-->
-    <!--      class="settings-show-hide-btn"-->
-    <!--      type="button"-->
-    <!--      data-field-name="Game Time"-->
-    <!--      (click)="toggleGameClockVisibility(data.scoreboard_data!)"-->
-    <!--    >{{ data.scoreboard_data?.is_time ? 'Hide' : 'Show' }} Game Time Field-->
-    <!--    </button>-->
-    <!--    <button-->
-    <!--      id="playclock-btn-show-hide"-->
-    <!--      class="settings-show-hide-btn"-->
-    <!--      type="button"-->
-    <!--      data-field-name="Play Clock"-->
-    <!--      (click)="togglePlayClockVisibility(data.scoreboard_data!)"-->
-    <!--    >{{ data.scoreboard_data?.is_playclock ? 'Hide' : 'Show' }} Play Clock Field-->
-    <!--    </button>-->
-    <!--    <button-->
-    <!--      id="down-distance-btn-show-hide"-->
-    <!--      class="settings-show-hide-btn"-->
-    <!--      type="button"-->
-    <!--      data-field-name="Down&amp;Distance"-->
-    <!--      (click)="toggleDownAndDistanceVisibility(data.scoreboard_data!)"-->
-    <!--    >{{ data.scoreboard_data?.is_downdistance ? 'Hide' : 'Show' }} Down&amp;Distance Field-->
-    <!--    </button>-->
-
   </div>
   <div id="scoreboard-teams-colors" class="scoreboard-teams-colors">
     <div id="team-a-color-settings" class="team-a-color-settings">
-      <label class="color-team-a-label" for="team-a-color">Change Team A Color:</label>
+      <label class="color-team-a-label" for="team-a-color">Home Team Color:</label>
       <input
         id="team-a-color"
         class="team-color-picker"
@@ -78,7 +45,7 @@
 
     </div>
     <div id="team-b-color-settings" class="team-b-color-settings">
-      <label class="color-team-b-label" for="team-b-color">Change Team B Color:</label>
+      <label class="color-team-b-label" for="team-b-color">Away Team Color:</label>
       <input
         id="team-b-color"
         class="team-color-picker"
