refactoring admin change scoreboard data and css

--- a/src/app/shared/scoreboards/admin-forms/down-distance-forms/down-distance-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/down-distance-forms/down-distance-forms.component.less
@@ -122,3 +122,17 @@
   }
 
 }
+
+@media screen and (max-width: 420px) {
+  .down-selector {
+    grid-template-columns: repeat(2, auto);
+  }
+
+  .down-dist-selector-form {
+    //border: 1px solid #000000;
+
+    display: grid;
+    grid-template-columns: auto auto;
+  }
+
+}
