--- a/src/app/shared/scoreboards/admin-forms/score-forms/score-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/score-forms/score-forms.component.html
@@ -11,7 +11,7 @@
       <tui-input-number
         class="score-form_team_input"
         formControlName="scoreTeamA"
-      >Home Score:
+      >Home:
       </tui-input-number>
       <tui-error
         formControlName="scoreTeamA"
@@ -31,7 +31,7 @@
         class="score-form_team_input"
         formControlName="scoreTeamB"
 
-      >Away Score:
+      >Away:
       </tui-input-number>
       <tui-error
         formControlName="scoreTeamB"
