--- a/src/app/shared/scoreboards/admin-forms/score-forms/score-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/score-forms/score-forms.component.less
@@ -68,9 +68,6 @@
 }
 
 @media screen and (max-width: 720px) {
-  //.score-forms {
-  //  grid-template-columns: auto
-  //}
   .score-increment {
     grid-template-columns: auto auto;
   }
@@ -78,7 +75,12 @@
   .score-increment-buttons {
     grid-template-columns: auto;
   }
+}
 
+@media screen and (max-width: 420px) {
+  .score-increment {
+    grid-template-columns: auto;
+  }
 
 }
 
