--- a/src/app/shared/scoreboards/admin-forms/time-forms/time-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/time-forms/time-forms.component.html
@@ -13,13 +13,13 @@
       <tui-input-number
         class="game-timer-input"
         formControlName="gameTimeMinutes"
-      > Game Time Minutes:
+      > Min.
       </tui-input-number>
 
       <tui-input-number
         class="game-timer-input"
         formControlName="gameTimeSeconds"
-      > Game Time Seconds:
+      > Sec.
       </tui-input-number>
     </div>
 
