--- a/src/app/shared/scoreboards/admin-forms/timeout-forms/timeout-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/timeout-forms/timeout-forms.component.html
@@ -4,10 +4,9 @@
   class="timeouts-btns"
 >
   <div class="to-selector-form">
-    <p
-      class="tui-text_body-l"
-      style="grid-column: span 4; justify-self: center"
-    >Select TO Home:</p>
+    <label
+      class="to-label tui-text_body-m"
+    >Select TO Home:</label>
     <app-admin-timeout-button
       #btnHomeToZero
       [timeouts]="'○○○'"
@@ -38,10 +37,9 @@
   </div>
 
   <div class="to-selector-form">
-    <p
-      class="tui-text_body-l"
-      style="grid-column: span 4; justify-self: center"
-    >Select TO Away:</p>
+    <label
+      class="to-label tui-text_body-m"
+    >Select TO Away:</label>
     <app-admin-timeout-button
       #btnAwayToZero
       [timeouts]="'○○○'"
