--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
@@ -1,9 +1,3 @@
-.body {
-  font-family: "Arial", serif;
-  background-color: #cecece;
-  margin: 0;
-}
-
 .main-scoreboard,
 .fullhd-scoreboard-container {
   //display: grid;
@@ -22,7 +16,7 @@
   grid-template-columns: auto auto;
   grid-template-rows: auto;
 
-  grid-gap: 0; /* Set the gap to 0 to remove spaces between grid items */
+  grid-gap: 0;
 
 
   align-content: start;
@@ -247,7 +241,7 @@
 .downandyard {
   display: grid;
   grid-template-columns: auto auto;
-  width: 200px;
+  width: 150px;
   height: 100%;
 
   background: #808080;
@@ -353,7 +347,7 @@
 
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 550px) {
   .scoreboard {
 
     display: grid;
@@ -371,53 +365,19 @@
     margin: 0;
   }
 
-  //
-  //.teams-container{
-  //    display: grid;
-  //
-  //    border: 2px solid #000000;
-  //    grid-template-columns: auto;
-  //}
-  //
-  //.down-and-distance {
-  //    border: 1px solid #000000;
-  //
-  //    display: grid;
-  //    grid-template-columns: auto;
-  //    grid-template-rows: auto auto auto;
-  //
-  //    padding: 10px;
-  //    grid-gap: 10px;
-  //
-  //    align-content: center;
-  //    justify-content: stretch;
-  //}
-  //
-  //.change-down-distance-text {
-  //    border: 1px solid #000000;
-  //    grid-column: span 1;
-  //
-  //    display: grid;
-  //    grid-template-columns: auto;
-  //    grid-template-rows: auto auto;
-  //
-  //    padding: 10px;
-  //    grid-gap: 10px;
-  //
-  //    align-content: center;
-  //    justify-content: center;
-  //}
-  //
-  //.timeouts-btns {
-  //    border: 1px solid #000000;
-  //
-  //    display: grid;
-  //    grid-template-columns: auto;
-  //
-  //    padding: 10px;
-  //    grid-gap: 10px;
-  //
-  //    align-content: center;
-  //    justify-content: stretch;
-  //}
+  .team_a-name,
+  .team_b-name {
+    width: 180px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .game-container {
+    grid-template-columns: auto auto;
+  }
+
+  .team_a-name,
+  .team_b-name {
+    width: 160px;
+  }
 }
