--- a/src/app/shared/scoreboards/admin-forms/scoreboard-data-forms/scoreboard-data-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/scoreboard-data-forms/scoreboard-data-forms.component.less
@@ -1,19 +1,21 @@
 .scoreboard-settings {
-  border: 1px solid #000000;
+  //border: 1px solid #000000;
 
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: auto auto;
 
-  padding: 10px;
-  grid-gap: 10px;
+  //padding: 10px;
+  //grid-gap: 10px;
 
   align-content: center;
   justify-content: stretch;
 }
 
 .scoreboard-settings-btns {
-  border: 1px solid #000000;
+  //border: 1px solid #000000;
+  box-shadow: 0px 0px 10px 0px #232323;
+  border-radius: 5px;
 
   display: grid;
   grid-template-columns: repeat(4, auto);
@@ -26,14 +28,63 @@
 }
 
 .scoreboard-teams-colors {
-  border: 1px solid #000000;
+  //border: 1px solid #000000;
+
+  display: grid;
+  grid-template-columns: auto;
+  //
+  //padding: 10px;
+  //grid-gap: 10px;
+
+  margin-top: 10px;
+
+  align-content: center;
+  justify-content: stretch;
+}
+
+.scoreboard-teams-colors-forms {
+  //border: 1px solid #000000;
 
   display: grid;
   grid-template-columns: auto auto;
+  //
+  //padding: 10px;
+  grid-gap: 10px;
 
+  align-content: center;
+  justify-content: stretch;
+}
+
+.team-color-settings {
+  //border: 1px solid #000000;
+  box-shadow: 0px 0px 10px 0px #232323;
+  border-radius: 5px;
+
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto auto;
+  //
   padding: 10px;
   grid-gap: 10px;
 
   align-content: center;
   justify-content: stretch;
+}
+
+@media screen and (max-width: 750px) {
+  .scoreboard-settings-btns {
+
+    grid-template-columns: auto auto;
+
+  }
+
+}
+
+@media screen and (max-width: 480px) {
+  .scoreboard-settings-btns {
+
+    grid-template-columns: auto;
+
+  }
+
 }
