--- a/src/app/components/match-scoreboard-display/match-scoreboard-display.component.html
+++ b/src/app/components/match-scoreboard-display/match-scoreboard-display.component.html
@@ -4,6 +4,7 @@
     <app-scoreboard-display-flat
       [scoreboardDisplayClass]="'fullhd-scoreboard'"
       [data]="data"
+      [playClock]="playClock"
     ></app-scoreboard-display-flat>
   </div>
 }
