--- a/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
@@ -43,6 +43,7 @@
 
   <app-time-forms
     [data]="data"
+    [playclock]="playclock"
     [timeFormsVisible$]="timeFormsVisible$"
     [disabled]="(isMatchDataLoading$ | async)! || (isMatchDataSubmitting$ | async)!"
   ></app-time-forms>
