--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
@@ -10,7 +10,6 @@
 }
 
 .scoreboard {
-
   display: grid;
 
   grid-template-columns: auto auto;
@@ -18,14 +17,10 @@
 
   grid-gap: 0;
 
-
   align-content: start;
   justify-content: start;
 
-  /*padding: 10px;*/
   margin: 0;
-
-
 }
 
 .fullhd-scoreboard {
@@ -73,13 +68,11 @@
   align-items: center;
   justify-content: center;
   height: 70px;
-  font-size: 16px; /* Set a default font size */
-  overflow: hidden; /* Ensure overflow is hidden in the parent */
+  font-size: 16px;
+  overflow: hidden;
 }
 
 .team_a-detail {
-  display: grid;
-  grid-template-rows: 75% 15%;
   background-color: orangered;
 }
 
@@ -87,27 +80,22 @@
   background-color: cornflowerblue;
 }
 
-.team_a-name,
-.team_b-name {
-  width: 250px;
-  //border: 5px solid #ffc710;
+:host {
+  .team_a-name,
+  .team_b-name {
+    width: 250px;
+    display: grid;
+    justify-content: end;
+  }
 
-  display: grid;
-  justify-content: end;
-
-}
-
-.team_a-name span,
-.team_b-name span {
-  font-size: 26px;
-  //border: 5px solid #670a54;
-
-  text-transform: uppercase;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-
-  padding-right: 5px;
+  .team_a-name span,
+  .team_b-name span {
+    font-size: 26px;
+    text-transform: uppercase;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    padding-right: 5px;
+  }
 }
 
 .team_a-thisgame,
@@ -118,8 +106,8 @@
 
 }
 
-.team_a-timeout span,
-.team_b-timeout span {
+.team-timeout span,
+.team-timeout span {
   font-size: 16px;
 
 }
@@ -145,12 +133,13 @@
   transform: scale(2);
 }
 
-.team_a-scoreblock,
-.team_b-scoreblock {
+.team-scoreblock {
   grid-row: span 2;
 
   font-family: 'IntegralCF-Bold', sans-serif;
   display: grid;
+
+  letter-spacing: 0.2em;
 
   height: 100%;
   width: 70px;
@@ -161,12 +150,10 @@
   background-color: rgba(31, 31, 31, 0.8);
 
   padding: 0 5px;
-
 }
 
-.team_a-scoreblock span,
-.team_b-scoreblock span {
-  font-size: 40px;
+.team-scoreblock span {
+  font-size: 44px;
 }
 
 .quarter {
@@ -174,24 +161,22 @@
   width: 70px;
   height: 100%;
 
+  letter-spacing: 0.1em;
+
   border-right: 2px solid #000000;
 
 
   align-items: center;
   justify-content: center;
+
   margin: 0;
-
   padding: 0 5px;
-
 }
 
 .quarter span {
-
   font-size: 20px;
   font-weight: bold;
-
   text-transform: uppercase;
-
 }
 
 .play-clock {
@@ -200,6 +185,7 @@
   height: 100%;
 
   border-right: 2px solid #000000;
+  letter-spacing: 0.1em;
 
   align-items: center;
   justify-content: center;
@@ -224,28 +210,34 @@
 
 .timeleft {
   display: grid;
-  width: 100px;
-  height: 100%;
-
-  font-size: 28px;
+  grid-template-columns:  40% 15% 40%;
   align-items: center;
   justify-content: center;
+  width: 100px;
+  height: 100%;
+  font-size: 26px;
+  letter-spacing: 0.05em;
   border-right: 2px solid #000000;
   text-transform: uppercase;
-
   margin: 0;
   padding: 0 5px;
+}
 
+.clock-separator {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 26px;
 }
 
 .downandyard {
   display: grid;
-  grid-template-columns: auto auto;
-  width: 150px;
+  grid-template-columns: auto;
+  width: 160px;
   height: 100%;
 
+  letter-spacing: 0.1em;
   background: #808080;
-
   border-right: 2px solid #000000;
 
   align-items: center;
@@ -254,9 +246,7 @@
 }
 
 .downandyard span {
-
-  font-size: 26px;
-  /*-webkit-text-stroke: 1px black;*/
+  font-size: 20px;
 
   text-transform: uppercase;
 
@@ -278,13 +268,11 @@
     grid-template-columns: auto;
     grid-template-rows: auto;
 
-    grid-gap: 0; /* Set the gap to 0 to remove spaces between grid items */
-
+    grid-gap: 0;
 
     align-content: start;
     justify-content: start;
 
-    /*padding: 10px;*/
     margin: 0;
   }
 
@@ -293,78 +281,20 @@
 
 @media screen and (max-width: 900px) {
   .scoreboard {
-
-    display: grid;
-
     grid-template-columns: auto;
     grid-template-rows: auto;
-
-    grid-gap: 0; /* Set the gap to 0 to remove spaces between grid items */
-
-
-    align-content: start;
-    justify-content: start;
-
-    /*padding: 10px;*/
-    margin: 0;
   }
-
-  /*.down-selector{*/
-  /*    display: grid;*/
-  /*    grid-template-columns: repeat(2, auto);*/
-  /*    align-content: center;*/
-  /*    justify-content: stretch;*/
-  /*    grid-gap: 5px;*/
-  /*}*/
-
 }
 
 
 @media screen and (max-width: 720px) {
-  .scoreboard {
-
-    display: grid;
-
-    grid-template-columns: auto;
-    grid-template-rows: auto;
-
-    grid-gap: 0; /* Set the gap to 0 to remove spaces between grid items */
-
-
-    align-content: start;
-    justify-content: start;
-
-    /*padding: 10px;*/
-    margin: 0;
-  }
-
   .teams-container {
-    display: grid;
-
-    border: 2px solid #000000;
     grid-template-columns: auto;
   }
 
 }
 
 @media screen and (max-width: 550px) {
-  .scoreboard {
-
-    display: grid;
-
-    grid-template-columns: auto;
-    grid-template-rows: auto;
-
-    grid-gap: 0; /* Set the gap to 0 to remove spaces between grid items */
-
-
-    align-content: start;
-    justify-content: start;
-
-    /*padding: 10px;*/
-    margin: 0;
-  }
-
   .team_a-name,
   .team_b-name {
     width: 180px;
