refactoring matchdata, separate playclock and separate playclock websocket message

--- a/src/app/components/match-scoreboard-display/match-scoreboard-display.component.html
+++ b/src/app/components/match-scoreboard-display/match-scoreboard-display.component.html
@@ -1,10 +1,12 @@
 @if (data$ | async; as data) {
-  <div class="main-container-fullhd">
-    <div class="fullhd-separator"></div>
-    <app-scoreboard-display-flat
-      [scoreboardDisplayClass]="'fullhd-scoreboard'"
-      [data]="data"
-      [playClock]="playClock"
-    ></app-scoreboard-display-flat>
-  </div>
+  @if (playclock$| async; as playclock) {
+    <div class="main-container-fullhd">
+      <div class="fullhd-separator"></div>
+      <app-scoreboard-display-flat
+        [scoreboardDisplayClass]="'fullhd-scoreboard'"
+        [data]="data"
+        [playClock]="playclock.playclock!"
+      ></app-scoreboard-display-flat>
+    </div>
+  }
 }
