--- a/src/app/components/match-scoreboard-admin/match-scoreboard-admin.component.html
+++ b/src/app/components/match-scoreboard-admin/match-scoreboard-admin.component.html
@@ -1,17 +1,21 @@
 @if (data$ | async; as data) {
   @if (playclock$ | async; as playclock) {
-
-    {{ playclock.playclock_status }}
-    <!--SCOREBOARD ADMIN-->
-    <app-scoreboard-display-flat
-      [scoreboardDisplayClass]="'scoreboard'"
-      [data]="data"
-      [playClock]="playclock.playclock!"
-    ></app-scoreboard-display-flat>
-    <app-all-admin-forms
-      [playclock]="playclock"
-      [data]="data">
-    </app-all-admin-forms>
+    @if (gameclock$ | async; as gameclock) {
+      <!--      {{ playclock.playclock_status }}-->
+      <!--      {{ gameclock.gameclock_status }}-->
+      <!--SCOREBOARD ADMIN-->
+      <app-scoreboard-display-flat
+        [scoreboardDisplayClass]="'scoreboard'"
+        [gameClock]="gameclock.gameclock!"
+        [data]="data"
+        [playClock]="playclock.playclock!"
+      ></app-scoreboard-display-flat>
+      <app-all-admin-forms
+        [gameclock]="gameclock"
+        [playclock]="playclock"
+        [data]="data">
+      </app-all-admin-forms>
+    }
   }
 } @else {
   <tui-loader></tui-loader>
