--- a/src/app/components/match-scoreboard-display/match-scoreboard-display.component.html
+++ b/src/app/components/match-scoreboard-display/match-scoreboard-display.component.html
@@ -1,12 +1,15 @@
 @if (data$ | async; as data) {
-  @if (playclock$| async; as playclock) {
-    <div class="main-container-fullhd">
-      <div class="fullhd-separator"></div>
-      <app-scoreboard-display-flat
-        [scoreboardDisplayClass]="'fullhd-scoreboard'"
-        [data]="data"
-        [playClock]="playclock.playclock!"
-      ></app-scoreboard-display-flat>
-    </div>
+  @if (playclock$ | async; as playclock) {
+    @if (gameclock$ | async; as gameclock) {
+      <div class="main-container-fullhd">
+        <div class="fullhd-separator"></div>
+        <app-scoreboard-display-flat
+          [scoreboardDisplayClass]="'fullhd-scoreboard'"
+          [data]="data"
+          [playClock]="playclock.playclock!"
+          [gameClock]="gameclock.gameclock!"
+        ></app-scoreboard-display-flat>
+      </div>
+    }
   }
 }
