--- a/src/app/shared/scoreboards/admin-forms/time-forms/time-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/time-forms/time-forms.component.html
@@ -1,9 +1,9 @@
 <!--TIME-->
-{{ playclock.playclock }}
-{{ playclock.playclock_status }}
+<!--{{ playclock.playclock }}-->
+<!--{{ playclock.playclock_status }}-->
 
-{{ gameclock.gameclock }}
-{{ gameclock.gameclock_status }}
+<!--{{ gameclock.gameclock }}-->
+<!--{{ gameclock.gameclock_status }}-->
 
 <div
   *ngIf="timeFormsVisible$ | async"
@@ -80,13 +80,13 @@
     <div class="play-time-btns">
       <app-admin-down-button
         [down]="'40'"
-        (click)="startPlayClock(40)"
+        (click)="startPlayClock(41)"
         [disabled]="disabled || this.playclock.playclock_status === 'running'"
       ></app-admin-down-button>
 
       <app-admin-down-button
         [down]="'25'"
-        (click)="startPlayClock(5)"
+        (click)="startPlayClock(6)"
         [disabled]="disabled || this.playclock.playclock_status === 'running'"
       ></app-admin-down-button>
     </div>
