--- a/src/app/shared/scoreboards/admin-forms/time-forms/time-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/time-forms/time-forms.component.html
@@ -25,7 +25,7 @@
 
     <div class="time-inputs-save-btn">
       <app-admin-submit-button
-        [disabled]="disabled || this.gameclock?.gameclock_status === 'running'"
+        [disabled]="disabled || this.gameclock.gameclock_status === 'running'"
         (click)="saveNewGameClock(gameclock!)"
       ></app-admin-submit-button>
     </div>
@@ -33,7 +33,7 @@
     <app-admin-down-button
       [down]="'Start Clock'"
       (click)="startGameClock()"
-      [disabled]="disabled || this.gameclock?.gameclock_status === 'running'"
+      [disabled]="disabled || this.gameclock.gameclock_status === 'running'"
     ></app-admin-down-button>
 
     <app-admin-down-button
@@ -41,8 +41,8 @@
       (click)="pauseGameClock()"
       [disabled]="
       disabled
-      || (this.gameclock?.gameclock_status === 'paused'
-      || this.gameclock?.gameclock_status === 'stopped')"
+      || (this.gameclock.gameclock_status === 'paused'
+      || this.gameclock.gameclock_status === 'stopped')"
     ></app-admin-down-button>
 
     <app-admin-down-button
