image scoreboard game title and logo functionality

--- a/src/app/components/team/add-edit-team/add-edit-team.component.html
+++ b/src/app/components/team/add-edit-team/add-edit-team.component.html
@@ -64,6 +64,7 @@
         accept="image/*"
         [formControl]="teamLogoForm"
         (reject)="onReject($event)"
+        [maxFileSize]="30 * 1000 * 1000"
       >
         Team Logo Url
       </tui-input-files>
