--- a/src/app/shared/scoreboards/admin-forms/scoreboard-data-forms/scoreboard-data-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/scoreboard-data-forms/scoreboard-data-forms.component.html
@@ -35,7 +35,7 @@
       [formGroup]="teamColorForm"
     >
       <div class="team-color-settings">
-        <label class="tui-text_body-m">Home Team Color:</label>
+        <label class="tui-text_body-m">Home Team Game Color:</label>
         <input
           formControlName="colorTeamA"
           class="team-color-picker"
@@ -48,7 +48,7 @@
 
       </div>
       <div class="team-color-settings">
-        <label class="tui-text_body-m">Away Team Color:</label>
+        <label class="tui-text_body-m">Away Team Game Color:</label>
         <input
           formControlName="colorTeamB"
           class="team-color-picker"
