--- a/src/app/shared/scoreboards/admin-forms/change-teams-forms/change-teams-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/change-teams-forms/change-teams-forms.component.less
@@ -18,7 +18,7 @@
   border: 1px solid #000000;
 
   display: grid;
-  grid-template-rows: auto auto auto;
+  //grid-template-rows: auto auto auto;
   padding: 10px;
   grid-gap: 10px;
 
@@ -43,5 +43,17 @@
   font-size: 20px; /* Adjust the font size as needed */
   text-align: center; /* Adjust the text alignment as needed */
   width: 100%;
+
+}
+
+@media screen and (max-width: 720px) {
+  .change-team-info {
+    grid-template-columns: auto;
+  }
+
+}
+
+@media screen and (max-width: 420px) {
+
 
 }
