--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.html
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.html
@@ -8,13 +8,20 @@
 
           <div class="team_a-name">
               <span [style.font-size]="teamAFontSize">
-                {{ data.teams_data?.team_a?.title }}
+                {{
+                  data.scoreboard_data?.use_team_a_game_title ?
+                    data.scoreboard_data?.team_a_game_title :
+                    data.teams_data?.team_a?.title
+                }}
               </span>
           </div>
 
           <div class="team_a-logo">
             <img
-              src="{{data.teams_data?.team_a?.team_logo_url}}"
+              src="{{
+              data.scoreboard_data?.use_team_a_game_logo ?
+              data.scoreboard_data?.team_a_game_logo :
+              data.teams_data?.team_a?.team_logo_url}}"
               width="50"
               height="50"
               (error)="onImgError($event)"
@@ -35,12 +42,19 @@
         >
           <div class="team_b-name">
             <span [style.font-size]="teamBFontSize">
-              {{ data.teams_data?.team_b?.title }}
+              {{
+                data.scoreboard_data?.use_team_b_game_title ?
+                  data.scoreboard_data?.team_b_game_title :
+                  data.teams_data?.team_b?.title
+              }}
             </span>
           </div>
           <div class="team_b-logo">
             <img
-              src="{{data.teams_data?.team_b?.team_logo_url}}"
+              src="{{
+              data.scoreboard_data?.use_team_b_game_logo ?
+              data.scoreboard_data?.team_b_game_logo :
+              data.teams_data?.team_b?.team_logo_url}}"
               width="50"
               height="50"
               (error)="onImgError($event)"
