--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.html
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.html
@@ -18,7 +18,7 @@
 
           <div class="team_a-logo">
             <img
-              src="{{
+              src="{{staticUrl}}{{
               data.scoreboard_data?.use_team_a_game_logo ?
               data.scoreboard_data?.team_a_game_logo :
               data.teams_data?.team_a?.team_logo_url}}"
@@ -51,7 +51,7 @@
           </div>
           <div class="team_b-logo">
             <img
-              src="{{
+              src="{{staticUrl}}{{
               data.scoreboard_data?.use_team_b_game_logo ?
               data.scoreboard_data?.team_b_game_logo :
               data.teams_data?.team_b?.team_logo_url}}"
